--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
